# grid_data

./: .gitignore  .pre-commit-config.yaml  Dockerfile  NOTES.md  README.md  __init__.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dagster_project/assets/: forecast_assets.py
dbt_project/models/staging/: sources.yml
dbt_project/models/staging/ercot/: stg__ercot_prices.sql  stg__ercot_prices.yml
grid_data/: config.py
grid_data/dagster_project/assets/: dbt_assets.py
grid_data/dagster_project/resources/: local_resources.py
grid_data/data/raw/ercot/60_day_disclosures/: 60_day_dam_disclosure_dam_energy_bid_awards_2025-01-30_2025-01-31_2025-04-02T15:21:42_dam_energy_bid_awards.parquet  60_day_dam_disclosure_dam_energy_bids_2025-01-30_2025-01-31_2025-04-02T15:21:42_dam_energy_bids.parquet  60_day_dam_disclosure_dam_gen_resource_2025-01-30_2025-01-31_2025-04-02T15:21:41_dam_gen_resource.parquet  60_day_dam_disclosure_dam_gen_resource_as_offers_2025-01-30_2025-01-31_2025-04-02T15:21:41_dam_gen_resource_as_offers.parquet  60_day_dam_disclosure_dam_load_resource_2025-01-30_2025-01-31_2025-04-02T15:21:42_dam_load_resource.parquet  60_day_dam_disclosure_dam_load_resource_as_offers_2025-01-30_2025-01-31_2025-04-02T15:21:42_dam_load_resource_as_offers.parquet  (+1 more)
grid_data/dbt_project/: .user.yml  dbt_project.yml  profiles.yml
grid_data/dbt_project/models/staging/: sources.yml
grid_data/dbt_project/models/staging/ercot/generation/: stg__reported_outages.sql  (+11 more)
grid_data/scripts/: __init__.py  ercot_fetcher_utils.py  fetch_ercot_data.py  initiate_db.py
(+49 files in other folders)
